Add ability to run tests on API 21
PowerMock uses KXML, but it was changed in API 21 and not suitable for running on a desktop JVM. This commit makes PowerMock to use XPP3 instead of KXML.

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     testCompile "org.powermock:powermock-module-junit4:$powerMockVersion"
     testCompile "org.powermock:powermock-module-junit4-rule:$powerMockVersion"
     testCompile "org.powermock:powermock-api-mockito:$powerMockVersion"
-    testCompile "org.powermock:powermock-classloading-xstream:$powerMockVersion"
+    testCompile "org.ogce:xpp3:1.1.6"
+    testCompile "com.thoughtworks.xstream:xstream:1.4.2"
 
 }
