--- a/build.gradle
+++ b/build.gradle
@@ -4,19 +4,19 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.3'
+        classpath 'com.android.tools.build:gradle:2.2.1'
     }
 }
 
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         minSdkVersion 18
-        targetSdkVersion 18
+        targetSdkVersion 23
         versionCode 2
         versionName "1.0.0-SNAPSHOT"
         applicationId "com.example"
@@ -37,7 +37,9 @@ dependencies {
         mavenCentral()
     }
 
-    compile 'com.android.support:support-v4:22.1.0'
+    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:design:23.2.1'
 
     // Espresso
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.0')
